packages/react-app-revamp/app/globals.css
/* ... */
/* // Edit simplebar styles */
.simplebar-scrollbar::before {
  background-color: #6a6a6a;
}

/* Edit toastify styles */

.Toastify__toast-theme--colored.Toastify__toast--default {
  background-color: white !important;
  color: #e5e5e5 !important;
  border-radius: 10px !important;
  box-shadow:
    0 -2px 4px #28282c,
    0 2px 4px #28282c,
    0 1px 2px #28282c !important;
}

.Toastify__close-button {
  color: black !important;
}

.list-explainer li:hover::before {
  transform: rotate(15deg);
}

.list-bullet-points li::before {
  content: "\2022";
  color: #9d9d9d;
  font-weight: bold;
  display: inline-block;
  width: 1em;
}

.infinite-submissions {
  text-shadow: 1px 1px 8px rgba(120, 255, 198, 1);
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

li {
  box-sizing: border-box;
}

/* // Edit pull-to-refresh styles */
.ptr--ptr {
  left: 50%;
  transform: translateX(-45%);
}

.standalone-pwa {
  display: none;
}

@media all and (display-mode: standalone) {
  .standalone-pwa {
    display: flex;
  }
}

.button-delete-state {
  opacity: 0.5 !important;
  pointer-events: none !important;
}

.custom-tooltip {
  background-color: black !important;
}

.earnings-tooltip {
  background-color: #a1a1a1 !important;
}

.my-masonry-grid {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin-left: -16px; /* gutter size offset */
  width: auto;
}
.my-masonry-grid_column {
  padding-left: 16px; /* gutter size */
}

.my-masonry-grid_column > div {
  /* change div to reference your elements you put in <Masonry> */
  margin-bottom: 16px;
}

/* React tweet custom styles */

#tweet-skeleton > .react-tweet-theme {
  min-width: 100% !important;
}

.react-tweet-theme {
  background-color: #141414 !important;
  min-width: 580px !important;
  max-width: 100% !important;
}

@media (max-width: 768px) {
  .react-tweet-theme {
    min-width: 250px !important;
    width: 300px !important;
    max-width: 350px !important;
  }
}

[class^="tweet-replies_replies"] {
  display: none !important;
}
[class^="tweet-actions_reply"] {
  display: none !important;
}

[class^="tweet-header_authorFollow"] {
  display: none !important;
}
[class^="tweet-header_avatar"] {
  width: 32px !important;
  height: 32px !important;
}

[class^="tweet-header_header"] {
  font-size: 16px !important;
}

[class^="tweet-body_root"] {
  font-size: 16px !important;
}

[class^="react-tweet-theme"] {
  background-color: #e5e5e5 !important;
  border: 1px solid #242424 !important;
  border-radius: 16px !important;
}

[class^="quoted-tweet-container"] {
  min-width: 100% !important;
  max-width: 100% !important;
  overflow: hidden !important;
  border-radius: 16px !important;
}

.interweave-container {
  width: 100%;
  max-width: 100%;
}

/*
 Animate number from motion-plus classes
*/
.number-section-post {
  font-size: 16px;
  position: relative;
  bottom: 5px;
  align-self: flex-end;
  margin-left: 5px;
  letter-spacing: -0.02em;
  font-weight: 600;
  color: #9d9d9d;
}

/* LI.FI widget styles */
.MuiButton-containedPrimary {
  text-transform: lowercase !important;
}
/* ... */

